apps/plan-10wk/envs/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plan-10wk
  namespace: plan-10wk
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr/10wk_plan:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
